--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://psygraberkoenig.com'
 languageCode = 'de-de'
 title = 'Dr. Heidi Graber-König'
 theme = 'business'
