--- a/hugo.toml
+++ b/hugo.toml
@@ -4,7 +4,7 @@ title = 'Dr. Heidi Graber-König'
 theme = 'business'
 
 [Params]
-  subtitle = 'Ärztin für psychotherapeutische und psychosomatische Medizin,'
+  subtitle = 'Psychotherapie in Hard, Vorarlberg'
   subtitle2 = 'Allgemeinmedizin und Komplementärmedizin'
 
 [caches]
